--- a/finalExamRishabh/finalExamRishabh.csproj
+++ b/finalExamRishabh/finalExamRishabh.csproj
@@ -63,7 +63,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="UI\Provinces.xaml">
+	  <MauiXaml Update="UI\DetailsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="UI\ProvincesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
